--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "docx": "^9.5.1",
     "formik": "^2.4.6",
     "lucide": "^0.525.0",
     "lucide-react": "^0.525.0",
