--- a/requirements.txt
+++ b/requirements.txt
@@ -1,85 +1,68 @@
-alembic==1.14.1
+alembic==1.16.4
 amqp==5.3.1
 aniso8601==10.0.1
-asttokens==3.0.0
-async-timeout==5.0.1
-backcall==0.2.0
-backports.entry-points-selectable==1.3.0
-backports.zoneinfo==0.2.1
 bcrypt==4.3.0
+bidict==0.23.1
 billiard==4.2.1
-blinker==1.8.2
+blinker==1.9.0
 celery==5.5.3
-certifi==2025.6.15
+certifi==2025.7.14
 charset-normalizer==3.4.2
-click==8.1.8
+click==8.2.1
 click-didyoumean==0.3.1
-click-plugins==1.1.1
+click-plugins==1.1.1.2
 click-repl==0.3.0
-coverage==7.6.1
-decorator==5.2.1
-distlib==0.3.9
-exceptiongroup==1.3.0
-executing==2.2.0
-filelock==3.16.1
-Flask==3.0.3
+coverage==7.9.2
+dnspython==2.7.0
+eventlet==0.40.2
+Flask==3.1.1
 Flask-Bcrypt==1.0.1
-Flask-Cors==5.0.0
+flask-cors==6.0.1
 Flask-JWT-Extended==4.6.0
 Flask-Mail==0.10.0
-flask-marshmallow==1.2.1
+flask-marshmallow==1.3.0
 Flask-Migrate==4.1.0
 Flask-RESTful==0.3.10
+Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
-greenlet==3.1.1
+greenlet==3.2.3
 gunicorn==23.0.0
+h11==0.16.0
 honcho==2.0.0
+humanize==4.12.3
 idna==3.10
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
 iniconfig==2.1.0
-ipdb==0.13.13
-ipython==8.12.3
 itsdangerous==2.2.0
-jedi==0.19.2
 Jinja2==3.1.6
 kombu==5.5.4
 Mako==1.3.10
-MarkupSafe==2.1.5
-marshmallow==3.22.0
-marshmallow-sqlalchemy==1.1.1
-matplotlib-inline==0.1.7
+MarkupSafe==3.0.2
+marshmallow==4.0.0
+marshmallow-sqlalchemy==1.4.2
 packaging==25.0
-parso==0.8.4
-pexpect==4.9.0
-pickleshare==0.7.5
-pipenv==2024.4.1
-platformdirs==4.3.6
-pluggy==1.5.0
+pluggy==1.6.0
 prompt_toolkit==3.0.51
-psycopg2-binary==2.9.10
-ptyprocess==0.7.0
-pure_eval==0.2.3
-Pygments==2.19.1
-PyJWT==2.9.0
-pytest==8.3.5
+psycopg2-binary==2.9.9
+Pygments==2.19.2
+PyJWT==2.10.1
+pytest==8.4.1
 pytest-flask==1.3.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2025.2
-redis==6.1.1
+python-dotenv==1.1.1
+python-engineio==4.12.2
+python-socketio==5.13.0
+pytz==2024.2
+redis==6.2.0
 requests==2.32.4
+setuptools==70.3.0
+simple-websocket==1.1.0
 six==1.17.0
-SQLAlchemy==2.0.41
-SQLAlchemy-serializer==1.4.12
-stack-data==0.6.3
-tomli==2.2.1
-traitlets==5.14.3
-typing_extensions==4.13.2
+SQLAlchemy==2.0.29
+sqlalchemy-serializer==1.4.22
+typing_extensions==4.14.1
 tzdata==2025.2
-urllib3==2.2.4
+urllib3==2.5.0
 vine==5.1.0
-virtualenv==20.30.0
 wcwidth==0.2.13
-Werkzeug==3.0.6
-zipp==3.20.2
+Werkzeug==3.1.3
+wsproto==1.2.0
