switching db and preparing for deployment

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URI=postgresql://shuleni_azox_user:k97yZkaLgyDWHUUidaec9MLGdccpD7Qm@dpg-d1uumrvdiees73b4e44g-a.oregon-postgres.render.com/shuleni_azox?sslmode=require
+DATABASE_URI=postgresql://ernest:e1VxiJTFFa2KXu3SYtSiBQWojBAJSq7b@dpg-d2pepfje5dus73b2gbe0-a.frankfurt-postgres.render.com/shuleni?sslmode=require
 SECRET_KEY=supersecret
 JWT_SECRET_KEY=anothersecret
